--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -200,7 +200,7 @@
         </ul>
     </div>
 </nav>
-<div class="content-wrapper" [style.margin-left.px]=unlogContentSize>
+<div class="content-wrapper">
     <div class="container-fluid">
         <!-- Breadcrumbs-->
         <ol class="breadcrumb">
